auth/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherapp-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: weatherapp-auth
  template:
    metadata:
      labels:
        app.kubernetes.io/name: weatherapp-auth
    spec:
      containers:
      - name: weatherapp-auth
        image: mostafasalem2/weatherapp-auth:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
