auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-auth
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: weatherapp-auth
